<resources>
    <string name="app_name">MedRec</string>
    <string name="type_format">Type: %1$s</string>
    <string name="genres_format">Genres: %1$s</string>
    <string name="media_cover">Media cover image</string>

    <string-array name="status_options">
        <item>completed</item>
        <item>watching</item>
        <item>reading</item>
        <item>plan_to_watch</item>
        <item>plan_to_read</item>
    </string-array>

    <string-array name="media_types">
        <item>All</item>
        <item>Anime</item>
        <item>Manga</item>
        <item>Book</item>
        <item>Light Novel</item>
    </string-array>

    <string name="splash_slogan">Where all your media preferences come together.</string>
    <string name="login_title">MediaNest</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_prompt">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="username_hint">Username</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_redirect">Already have an account? Log In</string>

    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="already_have_account">Already have an account? Log In</string>

    <string name="hint_search_by_title">Search by title</string>
    <string name="button_apply">Apply</string>
    <string name="desc_filter_icon">Show filters</string>

</resources>


