<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Top Banner -->
        <include layout="@layout/toolbar" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gradient_dark"
            android:title="MediaNest"
            android:titleTextColor="@android:color/white"/>

        <!-- Top Banner -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/banner_gradient"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/gradient_dark"
            android:layout_marginBottom="24dp" />

        <EditText
            android:inputType="textPersonName"
            android:autofillHints="username"
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/purple_theme" />

        <EditText
            android:autofillHints="emailAddress"
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/purple_theme" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:autofillHints="password"
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:backgroundTint="@color/purple_theme" />

            <ImageView
                android:id="@+id/toggle_password_visibility"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_visibility_off"
                android:contentDescription="@string/toggle_password_visibility" />
        </RelativeLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@color/gradient_dark"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/already_have_account"
            android:textColor="@color/gradient_dark" />
    </LinearLayout>
</ScrollView>


